# thejorgelab-blog

./: .dockerignore  .example.env  .gitignore  Dockerfile  README.md  compose-production.yaml  compose.yaml  nginx.conf  pyproject.toml
.github/workflows/: ci_validation.yml  release.yml
accounts/migrations/: 0001_initial.py
blog/: admin.py  forms.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_tag_post_delete_blog.py  0003_post_image.py  0004_post_featured_alter_post_image.py
blog/templatetags/: parser.py
blogs/: models.py  views.py
db-data/: .gitignore
django_project/: settings.py  urls.py
healthcheck/: views.py
pages/: admin.py  models.py  tests.py  urls.py  views.py
pages/migrations/: 0001_initial.py  0002_aboutpage_photo.py
static/css/: base.css
templates/: 404.html  500.html  base.html
templates/blog/: post_create.html  post_delete.html  post_detail.html  post_list.html  post_update.html
templates/blogs/: home.html
templates/pages/: about.html
templates/registration/: login.html
