[project]
name = "thejorgelab-blog"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "bleach>=6.3.0",
    "django>=6.0.5",
    "environs[django]>=15.0.1",
    "gunicorn>=26.0.0",
    "markdown>=3.10.2",
    "whitenoise>=6.12.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.12",
    "ty>=0.0.35",
]

[tool.ruff]
extend-exclude = ["**/migrations"]
